[package]
name = "schedfuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.schedfuzz]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_tx_consistency"
path = "fuzz_targets/fuzz_tx_consistency.rs"
test = false
doc = false


[[bin]]
name = "fuzz_tx_consistency_only_valid_data1"
path = "fuzz_targets/fuzz_tx_consistency_only_valid_data1.rs"
test = false
doc = false
